--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -252,7 +252,7 @@ jobs:
       - name: Docker build 
         working-directory: control-plane
         run: |
-          ls /pkg/bin/linux_amd64
+          pwd
           ls
           unzip /pkg/bin/linux_amd64/consul-k8s_linux_amd64.zip
           make ci.dev-docker
