--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -238,6 +238,8 @@ jobs:
 
     env: 
       GITHUB_PULL_REQUEST: ${{github.event.pull_request.number}}
+      DOCKER_USER: ${{secrets.DOCKER_USER}}
+      DOCKER_PASS: ${{secrets.DOCKER_PASS}}
     steps:
       - uses: actions/checkout@v2
 
@@ -251,8 +253,6 @@ jobs:
       - name: Docker build 
         working-directory: control-plane
         run: |
-          pwd
-          ls
           unzip consul-k8s_linux_amd64.zip -d ./pkg/bin/linux_amd64
           make ci.dev-docker
 
