--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -238,8 +238,6 @@ jobs:
 
     env: 
       GITHUB_PULL_REQUEST: ${{github.event.pull_request.number}}
-      DOCKER_USER: ${{secrets.DOCKER_USER}}
-      DOCKER_PASS: ${{secrets.DOCKER_PASS}}
     steps:
       - uses: actions/checkout@v2
 
@@ -249,6 +247,11 @@ jobs:
         with:
           name: consul-k8s_linux_amd64.zip
           path: control-plane
+
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
 
       - name: Docker build 
         working-directory: control-plane
