--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -78,6 +78,7 @@ jobs:
         uses: actions/checkout@v2
    
       - run: go get -u github.com/hashicorp/lint-consul-retry 
+      - run:  echo "$GOPATH/bin" >> $GITHUB_PATH
       - run: lint-consul-retry
       - name: Run lint
         working-directory: control-plane
