try installing gotestsum with inputs and try fixing gotestsum package variable

--- a/.github/workflows/reusable-acceptance.yml
+++ b/.github/workflows/reusable-acceptance.yml
@@ -17,7 +17,7 @@ on:
       go-version:
         required: true
         type: string
-      gotestsum-verison:
+      gotestsum-version:
         required: true
         type: string
 
