find the tests!

--- a/.github/workflows/reusable-acceptance.yml
+++ b/.github/workflows/reusable-acceptance.yml
@@ -79,12 +79,16 @@ jobs:
           for pkg in $(echo ${{ matrix.test-packages }})
           do
             echo "Testing package: ${pkg}"
-              if ! gotestsum --no-summary=all --jsonfile=jsonfile-${pkg////-} --packages="${pkg}" -- -p 1 -timeout 2h -failfast \
+              pwd
+              ls
+              cd ${pkg}
+              if ! gotestsum --no-summary=all --jsonfile=jsonfile-${pkg////-} --packages="./..." -- -p 1 -timeout 2h -failfast \
               ${{ inputs.additional-flags }} \
               -enable-enterprise \
               -enable-multi-cluster \
               -debug-directory=${{ env.TEST_RESULTS }}/debug \
               -consul-k8s-image=${{ inputs.consul-k8s-image }} 
+            cd ..
             then
               echo "Tests in ${pkg} failed, aborting early"
               exit_code=1
