I see the license, do you see the license?

--- a/.github/workflows/reusable-acceptance.yml
+++ b/.github/workflows/reusable-acceptance.yml
@@ -36,7 +36,8 @@ jobs:
           - {runner: "3", test-packages: "partitions sync terminating-gateway vault"}
       fail-fast: true
     env:
-      CONSUL_ENT_LICENSE: ${{secrets.CONSUL_LICENSE}}
+      CONSUL_ENT_LICENSE: ${{ secrets.CONSUL_LICENSE }}
+      CONSUL_LICENSE: ${{ secrets.CONSUL_LICENSE }}
     steps:      
       - name: Checkout code
         uses: actions/checkout@v2
