--- a/.github/workflows/reusable-acceptance.yml
+++ b/.github/workflows/reusable-acceptance.yml
@@ -24,6 +24,8 @@ on:
 # Environment variables can only be used at the step level
 env:
   TEST_RESULTS: /tmp/test-results # path to where test results are saved
+  CONSUL_LICENSE: ${{ secrets.CONSUL_LICENSE }} 
+  CONSUL_ENT_LICENSE: ${{ secrets.CONSUL_LICENSE }} 
 
 jobs:
   a:
@@ -73,7 +75,6 @@ jobs:
       - name: Run acceptance tests ${{ matrix.runner }}
         working-directory: ${{ inputs.directory }}
         run: |
-          export CONSUL_ENT_LICENSE=${{ secrets.CONSUL_LICENSE }}
           exit_code=0
           echo "Running packages: ${{ matrix.test-packages }}"
           for pkg in $(echo ${{ matrix.test-packages }})
